<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginEnterPhoneNoActivity">

    <RelativeLayout
        android:id="@+id/image_rl"
        android:layout_width="match_parent"
        android:layout_height="280dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/splash_image_description"
            android:src="@drawable/splash_screen_logo" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/image_rl"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/enter_phone_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/ask_for_phone"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/enter_phone_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/enter_phone_tv"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:digits="0123456789"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/phone_icon"
            android:gravity="center"
            android:hint="@string/phone_no_et_hint"
            android:inputType="phone"
            android:maxLength="10" />

        <Button
            android:id="@+id/confirm_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/enter_phone_et"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimaryDark"
            android:text="@string/confirm_phone"
            android:textColor="@android:color/white" />

    </RelativeLayout>

</RelativeLayout>